MID-8842 upgrade, run-sql removed --scripts-directory option to simplify options